Aggiunto commento spiegazione della funzione map al file toGroupAPI.js alla riga 472, fatto del refactoring in toGroupAPI.js aggiungendo la classe GroupFullDetail come da back-end, utilizzandola poi in groupPage.js